# lineguard

./: .clippy.toml  .lineguardrc.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING.md  GITHUB_WORKFLOWS_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRODUCT_SPEC.md  README.md  codecov.yml  knope.toml  rustfmt.toml
.claude/sdd/: design.md  requirement.md  tasks.md
.github/: dependabot.yml
.github/workflows/: README.md  benchmark.yml  ci.yml  coverage.yml  dependencies.yml  prepare-release.yml  release.yml
dev/bench/: data.js
docs/: COVERAGE.md  README.md
docs/developer/: ARCHITECTURE.md  ERROR_HANDLING.md  README.md
docs/planning/: GITHUB_WORKFLOWS_GUIDE.md  GITHUB_WORKFLOWS_PLAN.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  README.md
docs/user/: CLI_REFERENCE.md  README.md
examples/: github-workflow.yml  pre-commit.sh
src/: lib.rs  main.rs
src/checker/: core.rs  (+5 more)
tests/: check_options_tests.rs  checker_edge_cases_tests.rs  checker_tests.rs  cli_tests.rs  concurrent_access_tests.rs  config_file_tests.rs  cpp_files_tests.rs  discovery_edge_cases_tests.rs  discovery_tests.rs  discovery_tests_symlinks.rs  example_usage.rs  exit_code_tests.rs  extensions_tests.rs  filtering_tests.rs  fix_tests.rs  fixer_edge_cases_tests.rs  git_range_tests.rs  hidden_files_tests.rs  human_reporter_tests.rs  ignore_pattern_tests.rs  integration_tests.rs  invalid_config_tests.rs  large_file_tests.rs  main_tests.rs  permission_tests.rs  reporter_tests.rs  stdin_tests.rs  test_utils.rs  unicode_path_tests.rs
(+21 files in other folders)
