[package]
name = "lineguard"
version = "0.1.1"
edition = "2024"
authors = ["hydai <z54981220@gmail.com>"]
description = "A fast and reliable file linter that ensures proper line endings and clean formatting"
repository = "https://github.com/hydai/lineguard"
license = "Apache-2.0"
keywords = ["lint", "formatter", "cli", "line-endings", "whitespace"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0"
rayon = "1.10"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.18"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
